<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">`

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/viewDivider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tvTitle"
        android:layout_marginTop="12dp"
        android:background="#DDDDDD" />


    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/viewDivider1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/account_circle"
        android:tint="#666666" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewDivider1"
        android:layout_toEndOf="@id/ivProfile"
        android:layout_marginTop="16dp"
        android:layout_marginStart="25dp"
        android:text="@string/username"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/llStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvUsername"
        android:layout_toEndOf="@id/ivProfile"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPostStat"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:text="@string/post_stat" />

    <TextView
        android:id="@+id/tvFollowerStat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/follower_stat" />

    <TextView
        android:id="@+id/tvFollowingStat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/following_stat" />
    </LinearLayout>

    <View
        android:id="@+id/viewDivider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/ivProfile"
        android:layout_marginTop="16dp"
        android:background="#DDDDDD" />

    <TextView
        android:id="@+id/tvBioLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewDivider2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:text="@string/bio_label"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvBioContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvBioLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="4dp"
        android:text="@string/bio_content"
        android:textColor="#666666" />

    <LinearLayout
        android:id="@+id/llButtonRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvBioContent"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="6dp"
        android:text="@string/edit_profile" />

    <Button
        android:id="@+id/btnShareProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="6dp"
        android:text="@string/share_profile" />

    </LinearLayout>

    <View
        android:id="@+id/viewDivider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/llButtonRow"
        android:layout_marginTop="16dp"
        android:background="#DDDDDD" />


    <LinearLayout
        android:id="@+id/llPostRow1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/viewDivider3"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

    <View
        android:id="@+id/post1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginEnd="2dp"
        android:background="@drawable/g1" />

    <View
        android:id="@+id/post2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginHorizontal="2dp"
        android:background="@drawable/g2" />

    <View
        android:id="@+id/post3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginStart="2dp"
        android:background="@drawable/g3" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPostRow2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/llPostRow1"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <View
            android:id="@+id/post4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="2dp"
            android:background="@drawable/g4" />

        <View
            android:id="@+id/post5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="2dp"
            android:background="@drawable/g5" />

        <View
            android:id="@+id/post6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="2dp"
            android:background="@drawable/g6" />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/llPostRow3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/llPostRow2"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <View
            android:id="@+id/post7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="2dp"
            android:background="@drawable/g7" />

        <View
            android:id="@+id/post8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="2dp"
            android:background="@drawable/g8" />

        <View
            android:id="@+id/post9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="2dp"
            android:background="@drawable/g9" />

    </LinearLayout>



</RelativeLayout>